[package]
name = "mdns_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
avahi-sys = "0.10.1"
mdns = "3.0.0"
pcap = "2.2.0"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full", "mio", "net"] }
zeroconf = "0.15.0"
