[package]
name = "mdns_scanner"
version = "0.2.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
wildcard_imports = "deny"
must_use_candidate = "warn"
enum_glob_use = "deny"
nursery = { level = "deny", priority = 1 }
unwrap_used = "deny"

[profile.release]
overflow-checks = false
lto = "fat"  # LTO can produce better optimized code; 'false', 'fat', 'thin', or 'off'
codegen-units = 16  # Split crate into units to increase parallelism during compilation, may produce slower code; '1 - 256'
panic = "abort"
incremental = false  # Store cache data to disk in the 'target' dir for quicker recompilation
opt-level = 3
strip = "symbols"  # equivalent to strip = true
rpath = false  
debug-assertions = false
debug = false

[dependencies]
avahi-sys = "0.10.1"
chrono = "0.4.40"
mdns = "3.0.0"
pcap = "2.2.0"
rusqlite = { version = "0.34.0", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
zeroconf = "0.15.0"
